tdf#150726: Pass full string to DrawTextArray() when drawing bullet

When drawing bullets for spaces, we were passing a substring to
DrawTextArray() and even taking care of adding an extra character to
both sides to help with Arabic layout. This, however, does not work when
part of the text is in different color because the portion will cover
only that substring and we wouldn’t be passing enough context.

Copying the substring is unnecessary, though, and we can pass the full
string like we do in the non-bullet case. The bullet array (where we
replace spaces with bullets), can continue to be a substring as we are
only drawing the bullets in this case.

This probably also means we can re-use the glyph cache when switching
between bullet and non-bullet mode.

Change-Id: I256ae7b6d592b8c6670d66619e428f943714be57
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140568
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>